# flexilims

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  release_notes.md  requirements.txt  setup.py
.github/: workflows
.github/workflows/: test_and_deploy.yml
docs/: ReadMe.md
flexilims/: __init__.py  main.py  offline.py  utils.py
mcms/: __init__.py  main.py
resources/: parameters.py
tests/: preformance_issues.ipynb  set_up_database.py  test_data.json  test_data.yaml  test_flexilims.py  test_main.py  test_mcms.py  test_offline.py
tests/test-results/: pytest_in_tests.xml
znamdb/: cli.py  main.py
