[project]
name = "flexilims"
authors = [{name = "Znamlab", email= "antonin.blot@crick.ac.uk"}]
description = "Python wrapper for Flexilims API"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

dependencies = ["requests",
        "pandas",
        "pyyaml"]

license = {text = "MIT"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/znamlab/flexilims"
"Bug Tracker" = "https://github.com/znamlab/flexilims/issues"
"Documentation" = "https://znamlab.github.io/flexilims"

"Source Code" = "https://github.com/znamlab/flexilims"
"User Support" = "https://github.com/znamlab/flexilims/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["flexilims*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=flexilims"
filterwarnings = [
    "error",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 88
exclude = ["__init__.py", "build", ".eggs"]
lint.select = [
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  # You can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # Some additional ruff rules that might be useful (uncomment to enable)
  #"UP",  # pyupgrade
  #"B",   # flake8 bugbear
  #"SIM", # flake8 simplify
  #"C90", # McCabe complexity
]
fix = true

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings (e.g. examples)

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{308,309,310,311,312,313}
isolated_build = True

[gh-actions]
python =
    3.08: py308
    3.09: py309
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=iss_sync_and_crunch --cov-report=xml
"""


[tool.codespell]
skip = '.git'
check-hidden = true
